# shimmer

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
licenses/: pbrt4-crate.txt  rs_pbrt.txt
scenes/: bunny.pbrt  cornell.pbrt  cornell_bunny.pbrt  cornell_sphere.pbrt  diffuse_sphere.pbrt  many_spheres.pbrt  simple_tri.pbrt  sphere_materials.pbrt  test.pbrt  tri_area_light.pbrt  tri_area_light_with_sphere.pbrt
scenes/killeroos/: killeroo-gold.pbrt  killeroo-simple-conductor.pbrt  killeroo-simple-dielectric.pbrt  killeroo-simple-diffuse.pbrt  killeroo-simple.pbrt
scenes/killeroos/geometry/: killeroo.pbrt
src/: aggregate.rs  bounding_box.rs  bsdf.rs  bxdf.rs  camera.rs  color.rs  colorspace.rs  compensated_float.rs  direction_cone.rs  file.rs  film.rs  filter.rs  float.rs  frame.rs  image.rs  image_metadata.rs  integrator.rs  interaction.rs  interval.rs  is_nan.rs  lib.rs  light.rs  light_sampler.rs  main.rs  material.rs  math.rs  media.rs  medium.rs  mipmap.rs  newtype_macros.rs  options.rs  paramdict.rs  parser.rs  primitive.rs  ray.rs  render.rs  rgb_to_spectra.rs  sampler.rs  sampling.rs  scattering.rs  (+12 more)
src/geometry/: bounding_box.rs  mod.rs  sphere.rs
src/geometry/vecmath/: length_fns.rs  mod.rs  normal.rs  point.rs  tuple.rs  tuple_fns.rs  vector.rs
src/loading/: error.rs  mod.rs  param.rs  paramdict.rs  parser.rs  parser_target.rs  scene.rs  token.rs  tokenizer.rs
src/shape/: bilinear_patch.rs  mesh.rs  mod.rs  shape.rs  sphere.rs  triangle.rs
src/spectra/: cie.rs  mod.rs  named_spectrum.rs  sampled_spectrum.rs  sampled_wavelengths.rs  spectrum.rs
src/vecmath/: frame.rs  has_nan.rs  length.rs  length_fns.rs  mod.rs  normal.rs  normalize.rs  point.rs  spherical.rs  tuple.rs  tuple_fns.rs  vec_types.rs  vecmath.rs  vector.rs
test_files/: cube.ply
