[package]
name = "shimmer"
version = "0.1.0"
edition = "2021"
authors = ["John Alberse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

use_f64 = []

[dependencies]
auto_ops = "0.3.0"
log = "0.4.0"
env_logger = "0.10.0"
float-cmp = "0.9.0"
itertools = "0.11.0"
once_cell = "1.18.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rgb2spec = "0.1.1"
bitflags = "2.4.1"

[dev-dependencies]
float_next_after = "1.0.0"
