[package]
name = "shimmer"
version = "0.1.0"
edition = "2021"
authors = ["John Alberse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# This should be removed when not doing active development; but I need it for profiling!
[profile.release] 
debug = true

[features]
default = []

use_f64 = []

[dependencies]
auto_ops = "0.3.0"
log = "0.4.0"
env_logger = "0.10.0"
float-cmp = "0.9.0"
itertools = "0.11.0"
once_cell = "1.18.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rgb2spec = "0.1.1"
bitflags = "2.4.1"
bumpalo = "3.14.0"
arrayvec = "0.7.4"
fast_polynomial = "0.1.0"
half = "2.2.1"
pdqselect = "0.1.1"
rayon = "1.8.0"
indicatif = {version = "*", features = ["rayon"]}
thread_local = "1.1.7"
string-interner = "0.14.0"
png = "0.17.10"
thiserror = "1.0.56"
clap = { version = "4.4.18", features = ["derive"] }

[dev-dependencies]
float_next_after = "1.0.0"

[profile.release-with-debug]
inherits = "release"
debug = true
